Working on a prototype for drawing trees at centers instead of spread around them, to see how it looks.